# id-doc-ocr

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: accuracy-sop.md  api.md  architecture.md  deployment.md  paddleocr-setup.md  paddleocr-vl-progress.md  paddleocr-vl.md  platform-architecture.md  plugin-onboarding.md  regression.md
docs/plans/: 2026-03-11-accuracy-implementation.md  2026-03-11-platform-design.md
docs/zh/: README.zh-CN.md  accuracy-sop.zh-CN.md
examples/: demo_runner.py  run_asset_smoke_regression.py  run_boarding_pass_demo.py  run_extraction_demo.py  run_paddleocr_demo.py  run_paddleocr_vl_demo.py  run_parser_regression.py  run_real_ocr.py  run_train_ticket_parser_demo.py  samples.json
examples/assets/: README.md  manifest.json
examples/fixtures/boarding_pass/: public_sample_00006737.expected.json
examples/fixtures/china_id/: basic_back.expected.json  basic_front.expected.json  multiline_address_lowercase_x.expected.json
examples/fixtures/hukou_booklet/: basic_member_card.expected.json  standalone_labels_infer_birth.expected.json
reports/: asset_smoke_regression_latest.json  parser_regression_latest.json
tests/: test_asset_manifest.py  test_asset_smoke_report.py  test_china_id.py  test_cli.py  test_detector_mock.py  test_eval_report.py  test_failure_log.py  test_hukou_booklet_parser.py  test_manifest_ops.py  test_medical_record_parser.py  test_mrz.py  test_paddleocr_adapter.py  test_paddleocr_vl_adapter.py  test_parser_regression_report.py  test_rapidocr_adapter.py  test_rectify.py  test_registry.py  test_runner_annotation.py  test_runner_vlm.py  test_service_api.py  test_train_ticket_parser.py  test_validators.py
tests/plugins/: test_boarding_pass_fixture.py  test_boarding_pass_parser.py  test_parser_regression_fixtures.py  test_passport_parser.py
(+90 files in other folders)
