[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "id-doc-ocr"
version = "0.1.0"
description = "Self-hosted OCR pipeline for identity documents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "zinianly-aide"}]
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
id-doc-ocr = "id_doc_ocr.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]
