[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "id-doc-ocr"
version = "0.1.0"
description = "Self-hosted OCR pipeline for identity documents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "zinianly-aide"}]
dependencies = [
  "pydantic>=2.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27.0",
]
ocr = [
  "rapidocr_onnxruntime>=1.4.4",
  "pillow>=10.0",
]
paddle-vl = [
  "paddleocr>=3.0.0",
  "pillow>=10.0",
]
paddle = [
  "paddleocr>=2.7.3",
  "pillow>=10.0",
]

[project.scripts]
id-doc-ocr = "id_doc_ocr.cli.main:main"
id-doc-ocr-api = "id_doc_ocr.cli.main:main_api"

[tool.setuptools.packages.find]
where = ["src"]
